--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,14 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/posts/save" role="button" class="btn btn-primary">글 등록</a>
+            <span th:if="${userName != null}">
+                Logged in as: <span th:text="${userName}" id="user"></span>
+                <a href="/logout" class="btn btn-info active" role="button">Logout</a>
+            </span>
+            <span th:if="${userName == null}">
+                <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                <a href="/oauth2/authorization/naver" class="btn btn-secondary active" role="button">Naver Login</a>
+            </span>
         </div>
     </div>
     <!-- 목록 출력 영역 -->
